[fix bug 1121733] Tabs missing from /firefox/tips pages

--- a/bedrock/firefox/templates/firefox/desktop/tips.html
+++ b/bedrock/firefox/templates/firefox/desktop/tips.html
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <div id="share-nav-wrapper" class="share-wrapper">
+      <div id="main-nav-wrapper" class="button-wrapper">
         {% include 'firefox/includes/social-share.html' %}
         <nav id="tips-nav-direct">
           <ol role="tablist">
@@ -249,7 +249,7 @@
           {{ _('You’re an expert!') }}
           {{ _('Now help your friends master Firefox.') }}
         </p>
-        <div class="share-wrapper">
+        <div class="button-wrapper">
           {% include 'firefox/includes/social-share.html' %}
         </div>
       </div>
