--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -138,7 +138,7 @@
     }
 }
 
-#share-nav-wrapper {
+#main-nav-wrapper {
     .clearfix();
 
     .socialshare {
@@ -413,7 +413,7 @@ html[dir='rtl'] {
         margin-left: @baseLine;
     }
 
-    #share-nav-wrapper .socialshare {
+    #main-nav-wrapper .socialshare {
         float: right;
     }
 
@@ -505,7 +505,7 @@ html[dir='rtl'] {
             .font-size(22px);
         }
 
-        #share-nav-wrapper {
+        #main-nav-wrapper {
             margin: -20px 156px 0 0;
 
             .socialshare {
