[fix bug 1122462] Download Firefox homepage promo missing small links

--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -583,6 +583,10 @@ html[lang|="en"] {
             a:focus {
                 color: #fff;
             }
+
+            &.download-other-desktop {
+                display: block !important;
+            }
         }
 
         .unsupported-download {
@@ -676,6 +680,10 @@ html[lang|="en"] {
     .promo-small-landscape.firefox-download {
         .fxos-link {
             display: inline-block;
+        }
+
+        .download-other.download-other-desktop {
+            display: none !important;
         }
     }
 }
