--- a/bedrock/firefox/templates/firefox/geolocation.html
+++ b/bedrock/firefox/templates/firefox/geolocation.html
@@ -201,19 +201,19 @@
   </div>
 </section>
 
-<section>
-  {% if l10n_has_tag('geolocation_faq_update') %}
+{% if l10n_has_tag('geolocation_faq_update') %}
+  <section>
     <h3 data-accordion-role="tab">{{ _('How can I add support for Geolocation to my web site?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
       {% trans url="https://developer.mozilla.org/docs/Web/API/Geolocation/Using_geolocation" %}
-      You can integrate Geolocation support into your service by following the instructions
-      <a href="{{ url }}">Mozilla Developer Center</a>.
+        You can integrate Geolocation support into your service by following the instruction at
+        <a href="{{ url }}">Mozilla Developer Center</a>.
       {% endtrans %}
       </p>
     </div>
-  {% endif %}
-</section>
+  </section>
+{% endif %}
 
 </section><!-- end #faq -->
 
