--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -778,7 +778,14 @@ html[lang|="en"] {
     .background-size(100px, 100px);
 
     h2 {
-        padding: 20px 10px 10px 130px;
+        padding: 20px 10px 10px 125px;
+        .font-size(16px);
+    }
+}
+
+[lang|='en'] {
+    .promo-small-landscape.advocacy h2 {
+        .font-size(22px);
     }
 }
 
